# cvPipeline

./: CMakeLists.txt  README.md
inc/: ImageProcessor.h  ImgProcSet.h  VideoCapture.h  cvPipeline.h
sample/: viewer.cpp  viewer.xml
src/: CMakeLists.txt  ImageProcessor.cpp  ImgProcSet.cpp  VideoCapture.cpp
